making the getAll function work with local DB

--- a/perfectPixelApi/appsettings.json
+++ b/perfectPixelApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ImageContext": "Data Source=DESKTOP-KJ14MRM;Initial Catalog=Images;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
